--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "campo-minado",
     "version": "0.1.0",
+    "homepage": "https://esdrasnani.github.io/minesweeper",
     "private": true,
     "dependencies": {
         "@react-icons/all-files": "^4.1.0",
